gateway/thanos-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: thanos-gateway
  namespace: monitoring
spec:
  gatewayClassName: ace
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: prom-proxy-cert
            namespace: monitoring
