gateway/thanos-querier.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-querier-route
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: thanos-gateway
      namespace: monitoring
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /querier
      backendRefs:
        - name: thanos-query-ts-1
          port: 9090
