gateway/thanos-receiver.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-receiver-route
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: thanos-gateway
      namespace: monitoring
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /receiver
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: thanos-receive-router-ts-1
          port: 19291
